(#) CodeMirror editor now with word-wrap; content-area styles corrected on front-end

--- a/Site/media/css/codemirror/codemirror.css
+++ b/Site/media/css/codemirror/codemirror.css
@@ -75,7 +75,6 @@
   border-width: 0; margin: 0; padding: 0; background: transparent;
   font-family: inherit;
   font-size: inherit;
-  padding: 0; margin: 0;
   white-space: pre;
   word-wrap: normal;
   line-height: inherit;
