--- a/Site/media/css/sobipro.less
+++ b/Site/media/css/sobipro.less
@@ -53,6 +53,37 @@ iframe, svg { max-width: inherit; }
 
 .ma-5x { font-size: 5em; }
 
+.SobiPro {
+	.CodeMirror pre {
+		-moz-border-radius: 0;
+		-webkit-border-radius: 0;
+		border-radius: 0;
+		border-width: 0;
+		background: 0 0;
+		font-family: inherit;
+		font-size: inherit;
+		margin: 0;
+		white-space: pre;
+		word-wrap: normal;
+		line-height: inherit;
+		color: inherit;
+		z-index: 2;
+		position: relative;
+		overflow: visible;
+		-webkit-tap-highlight-color: transparent;
+		-webkit-font-variant-ligatures: contextual;
+		font-variant-ligatures: contextual;
+	}
+	.CodeMirror-wrap pre {
+		word-wrap: break-word;
+		white-space: pre-wrap;
+		word-break: normal;
+	}
+	.CodeMirror pre {
+		padding: 0 4px;
+	}
+}
+
 @media (min-width: 481px) and (max-width: 979px) {
 	.input-splarge {
 		width: calc(100% - 10px);
@@ -70,3 +101,5 @@ iframe, svg { max-width: inherit; }
 		box-sizing: border-box;
 	}
 }
+
+
